# slurm_run

./: Makefile  README.md  pyproject.toml
slurm_run/: cli.py  jobs.py  nightly.py  slurm.py  submit.py  utils.py
src/slurm_run/: slurm.py
