[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm_run"
version = "0.1.0"
description = "Slurm job launcher"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "tabulate",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["slurm_run"]

[project.scripts]
slurm = "slurm_run.cli:main"

[tool.pixi.project]
name = "slurm_run"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
slurm_run = { path = ".", editable = true }

[tool.pixi.tasks]
