[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm_run"
version = "0.1.0"
description = "Slurm job launcher"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "tabulate",
]

[project.scripts]
slurm = "slurm_run.cli:main"

[tool.setuptools]
packages = ["slurm_run"]

[tool.pixi.project]
name = "slurm_run"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.9"
